terraform/compute.tf
data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }
}

resource "aws_key_pair" "sentinel_key" {
  key_name   = "sentinel_key-${timestamp()}"
  public_key = var.public_key
}

resource "aws_instance" "secure_auth_ec2" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.public_subnet.id
  vpc_security_group_ids      = [aws_security_group.web_server_sg.id]
  key_name                    = aws_key_pair.sentinel_key.key_name
  associate_public_ip_address = true

  root_block_device {
    volume_size = 20
    volume_type = "gp3"
  }

  tags = {
    Name = "secure_auth_ec2"
  }

  depends_on = [aws_key_pair.sentinel_key]
}
